@@ -9,6 +9,7 @@ import io.ejangs.docsa.domain.branch.entity.Branch;
 import io.ejangs.docsa.domain.commit.entity.Commit;
 import io.ejangs.docsa.domain.doc.app.DocService;
 import io.ejangs.docsa.domain.doc.dao.mysql.DocRepository;
+import io.ejangs.docsa.domain.doc.dto.RecentActivityDto;
 import io.ejangs.docsa.domain.doc.dto.RecentActivityDto.RecentType;
 import io.ejangs.docsa.domain.doc.dto.request.DocTitleRequest;
 import io.ejangs.docsa.domain.doc.dto.response.CommitGraphResponse;
@@ -16,6 +17,7 @@ import io.ejangs.docsa.domain.doc.dto.response.DocListSimpleResponse;
 import io.ejangs.docsa.domain.doc.dto.response.DocTitleUpdateResponse;
 import io.ejangs.docsa.domain.doc.entity.Doc;
 import io.ejangs.docsa.domain.doc.entity.Edge;
+import io.ejangs.docsa.domain.doc.util.DocListAssembler;
 import io.ejangs.docsa.domain.doc.util.DocTestUtils;
 import io.ejangs.docsa.domain.save.util.PageableFactory;
 import io.ejangs.docsa.domain.user.entity.User;
@@ -32,7 +34,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.test.util.ReflectionTestUtils;
 
@@ -45,41 +46,60 @@ public class DocServiceUnitTests {
     @Mock
     private DocRepository docRepository;
 
+    @Mock
+    private DocListAssembler docListAssembler;
+
     @Test
     @DisplayName("사이드바 문서 목록 조회 성공 테스트")
     void getSimpleDocumentListSuccess() throws Exception {
-
         // given
         Long userId = 1L;
         User user = DocTestUtils.createUser();
         ReflectionTestUtils.setField(user, "id", userId);
 
-        Long docId = 10L;
         List<Doc> content = DocTestUtils.createDocumentListForUnitTest(2, user);
         Pageable pageable = PageableFactory.create("updatedAt", "desc", 0, 10);
+        Page<Doc> docs = new PageImpl<>(content, pageable, content.size());
 
-        Page<Doc> docs = new PageImpl<>(
-                content,
-                PageRequest.of(0, 10),
-                content.size()
+        List<DocListSimpleResponse> expectedResponses = List.of(
+                new DocListSimpleResponse(
+                        1L,
+                        "테스트 문서 1",
+                        LocalDateTime.of(2025, 7, 16, 2, 0),
+                        LocalDateTime.of(2025, 7, 16, 2, 0),
+                        new RecentActivityDto(RecentType.SAVE, 10L)
+                ),
+                new DocListSimpleResponse(
+                        2L,
+                        "테스트 문서 2",
+                        LocalDateTime.of(2025, 7, 16, 3, 0),
+                        LocalDateTime.of(2025, 7, 16, 3, 0),
+                        new RecentActivityDto(RecentType.COMMIT, 200L)
+                )
         );
+        Page<DocListSimpleResponse> dummyPage = new PageImpl<>(expectedResponses, pageable,
+                expectedResponses.size());
 
         when(docRepository.findAllByUserId(userId, pageable)).thenReturn(docs);
+        when(docListAssembler.assembleDocListSimple(docs)).thenReturn(dummyPage);
 
         // when
         Page<DocListSimpleResponse> page = docService.getSimpleList(userId, pageable);
         List<DocListSimpleResponse> result = page.getContent();
+
         // then
         assertEquals(2, result.size());
-        assertEquals("테스트 문서 1", result.getFirst().title());
 
-        assertEquals(RecentType.SAVE, result.getFirst().recent().recentType());
-        assertEquals(10L, result.getFirst().recent().recentTypeId());
+        assertEquals("테스트 문서 1", result.get(0).title());
+        assertEquals(RecentType.SAVE, result.get(0).recent().recentType());
+        assertEquals(10L, result.get(0).recent().recentTypeId());
 
-        assertEquals(RecentType.COMMIT, result.getLast().recent().recentType());
-        assertEquals(200L, result.getLast().recent().recentTypeId());
+        assertEquals("테스트 문서 2", result.get(1).title());
+        assertEquals(RecentType.COMMIT, result.get(1).recent().recentType());
+        assertEquals(200L, result.get(1).recent().recentTypeId());
 
         verify(docRepository).findAllByUserId(userId, pageable);
+        verify(docListAssembler).assembleDocListSimple(docs);
     }
 
     @Test
